--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
@@ -270,24 +270,23 @@
                         </tr>
                         <tr>
                             <td>Tallenna tulos</td>
-                            <td><input type="checkbox" size="15" ng-model="funktioSelection.lapsi.tallennaTulos"
-                                       ng-false-value="false" ng-true-value="true"/></td>
+                            <td><input type="checkbox" size="25" ng-model="funktioSelection.lapsi.tallennaTulos"/></td>
                         </tr>
-                        <tr>
+                        <tr ng-show="funktioSelection.lapsi.tallennaTulos">
                             <td>Tulostunniste</td>
-                            <td><input type="text" size="15" ng-model="funktioSelection.lapsi.tulosTunniste"/></td>
+                            <td><input type="text" size="25" placeholder="Tulostunniste on pakollinen" ng-model="funktioSelection.lapsi.tulosTunniste"/><i class="margin-left-1 fa fa-exclamation red"></i></td>
                         </tr>
-                        <tr>
+                        <tr ng-show="funktioSelection.lapsi.tallennaTulos">
                             <td>Tulosteksti FI</td>
-                            <td><input type="text" size="15" ng-model="funktioSelection.lapsi.tulosTekstiFi"/></td>
+                            <td><input type="text" size="25" ng-model="funktioSelection.lapsi.tulosTekstiFi"/></td>
                         </tr>
-                        <tr>
+                        <tr ng-show="funktioSelection.lapsi.tallennaTulos">
                             <td>Tulosteksti SV</td>
-                            <td><input type="text" size="15" ng-model="funktioSelection.lapsi.tulosTekstiSv"/></td>
+                            <td><input type="text" size="25" ng-model="funktioSelection.lapsi.tulosTekstiSv"/></td>
                         </tr>
-                        <tr>
+                        <tr ng-show="funktioSelection.lapsi.tallennaTulos">
                             <td>Tulosteksti EN</td>
-                            <td><input type="text" size="15" ng-model="funktioSelection.lapsi.tulosTekstiEn"/></td>
+                            <td><input type="text" size="25" ng-model="funktioSelection.lapsi.tulosTekstiEn"/></td>
                         </tr>
                         </tbody>
                     </table>
