--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/laskentakaavapuu.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/laskentakaavapuu.html
@@ -1,6 +1,16 @@
 
 <div ng-controller="LaskentakaavaController" class="gradingformula dd" style="width:60%;float:left;">
     <h2>Laskentakaava</h2>
+
+    <!-- Laskentakaavassa olevat virheet-->
+    <div class="alert alert-danger margin-top-2" ng-if="errors.length > 0">
+        <p>Laskentakaavaa ei voitu tallentaa. Tarkista että olet täyttänyt kaikki pakolliset kentät</p>
+    </div>
+
+    <div class="alert alert-success margin-top-2" ng-if="saved">
+        <p>Laskentakaava tallennettu</p>
+    </div>
+
     <!-- FUNKTIOASETUKSET -->
     <div ng-controller="funktiokutsuAsetuksetController">
         <modal modal-template="laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html">
@@ -19,6 +29,8 @@
         <span class="icon">&#8302;</span>
         <span class="node bold" ng-click="setRootSelection(model.laskentakaavapuu.funktiokutsu)">{{model.laskentakaavapuu.nimi}}</span>
     </div>
+
+
     <!-- piirretään laskentakaavapuu, oletetaan että kaavan sisältö ei voi olla pelkästään yksi laskentakaavaviite -->
     <ul class="frame-content">
         <li class="item" ng-repeat="funktiowrapper in model.laskentakaavapuu.funktiokutsu.funktioargumentit" ng-init="parent = model.laskentakaavapuu.funktiokutsu">
@@ -26,6 +38,7 @@
         </li>
         <li class="item" ng-init="laskentakaavatyyppi = model.laskentakaavapuu.tyyppi; parent = model.laskentakaavapuu.funktiokutsu" ng-if="model.laskentakaavapuu.funktiokutsu.funktioargumentit.length === 0" ng-include="'addFunktioToRoot'"></li>
     </ul>
+
 </div>
 
 
@@ -44,7 +57,6 @@
             <div ng-if="funktiowrapper.lapsi.lapsityyppi === 'laskentakaava'" ng-include="'laskentakaavaviite'"></div>
             <div ng-if="funktiowrapper.lapsi == undefined" ng-include="'nimettyFunktioSlot'"></div>
         </li>
-
         <li ng-if="!isNimettyFunktioargumentti(parent) && !isPainotettukeskiarvoChild(parent)" ng-include="'addFunktio'"></li>
             
     </ul>
