laskentakaavan virhelistasta pääsee virhettä klikkaamalla suoraan virheellisen funktiokutsun muokkaukseen

--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
@@ -159,6 +159,7 @@
     <h3>Funktioasetukset</h3>
 </div>
 <div class="modal-body">
+    <h2>{{getFunktiokutsuName(funktioSelection)}}</h2>
     <div class="settingsform">
 
 
