--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/laskentakaavapuu.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/laskentakaavapuu.html
@@ -1,6 +1,11 @@
 
 <div ng-controller="LaskentakaavaController" class="gradingformula dd" style="width:60%;float:left;">
 
+
+    <span class="btn btn-sm btn-default" ng-click="back()"><i class="fa fa-arrow-left"></i> Takaisin</span>
+    <span class="btn btn-sm btn-primary" ng-click="persist()"><i class="fa fa-floppy-o"></i> Tallenna</span>
+
+
     <!-- Laskentakaavassa olevat virheet-->
     <div class="alert alert-danger margin-top-2" ng-if="errors.length > 0">
         <h3>Laskentakaavaa ei voitu tallentaa.</h3>
