--- a/src/main/webapp/app/laskentakaavat/listaus/hakukohdelaskentakaavalista.html
+++ b/src/main/webapp/app/laskentakaavat/listaus/hakukohdelaskentakaavalista.html
@@ -13,50 +13,14 @@
 
 <div class="tabsheets">
     <breadcrumb></breadcrumb>
+    <button type="button" class="btn btn-sm btn-default" ng-click="cancel()">
+        <i class="fa fa-arrow-left"></i> Takaisin
+    </button>
+    <span ng-click="createKaava()" class="btn btn-primary btn-sm"><i class="fa fa-plus"></i> Uusi laskentakaava</span>
+
     <h2>Laskentakaavalista</h2>
     
-    <span ng-click="createKaava()" class="btn btn-default btn-sm"><i class="fa fa-plus"></i> Uusi laskentakaava</span>
-   
-    <div ng-show="showForm">
-        <form class="form-horizontal" name="kaavaForm" novalidate>
-            <div class="form-group">
-                <label class="col-md-2 control-label">Laskentakaavan nimi</label>
-
-                <div class="col-md-10 control-content">
-                    <input type="text" ng-model="kaava.nimi" required />
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="control-label col-md-2">Laskentakaavan kuvaus</label>
-
-                <div class="col-md-10 control-content">
-                    <textarea ng-model="kaava.kuvaus"></textarea>
-                </div>
-            </div>
-            <div class="form-group" ng-show="!kaava.id">
-                <label class="control-label col-md-2">Laskentakaavan tyyppi</label>
-
-                <div class="control-content col-md-10">
-                    <input type="radio" name="tyyppi" value="NIMETTYTOTUUSARVO" ng-model="kaava.tyyppi" /> Totuusarvofunktio
-                    <br />
-                    <input type="radio" name="tyyppi" value="NIMETTYLUKUARVO" ng-model="kaava.tyyppi" /> Lukuarvofunktio
-                </div>
-            </div>
-            <div class="form-group">
-                <div class="col-md-2">
-                    <button class="btn btn-default btn-sm"
-                          ng-click="saveKaava(kaava)"
-                          ng-disabled="kaavaForm.$invalid"><i
-                            class="fa fa-floppy-o"></i> Tallenna</button>
-                    <span class="btn btn-default btn-sm" ng-click="cancelEdit(kaava)"><i
-                            class="fa fa-arrow-left"></i> Peruuta</span>
-                </div>
-            </div>
-        </form>
-    </div>
-
     <div class="col-md-12" ng-repeat="hakukohde in hakukohdeLaskentakaavaLista.hakukohdeList()">
-
 
         <h3>{{hakukohde.nimi}}</h3>
         <div class="alert alert-info" ng-show="hakukohde.laskentakaavat.length == 0">
@@ -68,7 +32,6 @@
                 <tr>
                     <th>Nimi</th>
                     <th>Kuvaus</th>
-                    <th></th>
                 </tr>
             </thead>
             <tbody>
@@ -78,9 +41,6 @@
                     </td>
                     <td>
                         {{kaava.kuvaus}}
-                    </td>
-                    <td>
-                        <a ng-click="editKaava(kaava)">Muokkaa</a>
                     </td>
                 </tr>
             </tbody>
@@ -99,7 +59,6 @@
                 <tr>
                     <th>Nimi</th>
                     <th>Kuvaus</th>
-                    <th></th>
                 </tr>
                 </thead>
                 <tbody>
@@ -109,9 +68,6 @@
                     </td>
                     <td>
                         {{kaava.kuvaus}}
-                    </td>
-                    <td>
-                        <a ng-click="editKaava(kaava)">Muokkaa</a>
                     </td>
                 </tr>
                 </tbody>
