--- a/src/main/webapp/app/laskentakaavat/listaus/hakukohdelaskentakaavalista.html
+++ b/src/main/webapp/app/laskentakaavat/listaus/hakukohdelaskentakaavalista.html
@@ -64,7 +64,7 @@
                 <tbody>
                 <tr ng-repeat="kaava in valintaryhma.laskentakaavat">
                     <td>
-                        <a href="#{{linkprefix}}/laskentakaava/{{kaava.id}}">{{kaava.nimi}}</a>
+                        <a href="#{{linkprefix}}/laskentakaavalista/laskentakaava/{{kaava.id}}">{{kaava.nimi}}</a>
                     </td>
                     <td>
                         {{kaava.kuvaus}}
