--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/laskentakaavapuu.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/laskentakaavapuu.html
@@ -448,6 +448,11 @@ YHTASUURI
             <td ng-click="addFunktio(parent, 'HAEYOARVOSANA', funktioSlotIndex); showNewFunktioList.visible = false">
                 <span>YO-arvosana</span></td>
         </tr>
+        <tr>
+            <td ng-click="addFunktio(parent, 'HAEOSAKOEARVOSANA', funktioSlotIndex); showNewFunktioList.visible = false">
+                <span>YO-osakoearvosana</span></td>
+            <td</td>
+        </tr>
         </tbody>
     </table>
 </script>
