--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/uusilaskentakaava.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/uusilaskentakaava.html
@@ -2,7 +2,7 @@
     <span class="btn btn-sm btn-default" ng-click="back()"><i class="fa fa-arrow-left"></i> Takaisin</span>
     <button class="btn btn-sm btn-primary"
             ng-click="createKaava(kaava)"
-            ng-disabled="kaavaForm.$invalid"><i class="fa fa-plus"></i> Luo uusi laskentakaava
+            ng-disabled="kaavaForm.$invalid"><i class="fa fa-plus"></i> Alusta uusi laskentakaava
     </button>
 
     <h2>Uuden laskentakaavan luonti</h2>
