--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/laskentakaavaviiteAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/laskentakaavaviiteAsetuksetModal.html
@@ -3,7 +3,6 @@
 </div>
 
 <div class="modal-body">
-
     <div ng-repeat="valintaryhmaList in laskentakaavalista.valintaryhmaList()">
 
         <div ng-repeat="valintaryhma in valintaryhmaList">
@@ -13,8 +12,10 @@
                 <div ng-repeat="kaava in valintaryhma.laskentakaavat"
                      ng-if="kaava.id !== model.laskentakaavapuu.id">
                     <input type="radio" name="laskentakaavaviite" ng-value="kaava"
-                           ng-change="setLaskentakaavaviite(kaava)" ng-model="laskentakaavaviite.selection"/><label
-                        name="laskentakaavaviite"> {{kaava.nimi}}</label>
+                           ng-change="setLaskentakaavaviite(kaava)" ng-model="laskentakaavaviite.selection"/>
+                    <label name="laskentakaavaviite">
+                        {{kaava.nimi}} <a ng-click="sulje()" ng-href="#/valintaryhma/{{valintaryhma.oid}}/laskentakaavalista/laskentakaava/{{kaava.id}}"><i class="fa fa-pencil"></i></a>
+                    </label>
                 </div>
             </div>
         </div>
