Erillinen factory laskentakaavojen validointiin

--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -52,6 +52,7 @@
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/laskentakaavalomake.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/laskentakaavapuu.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/funktioServices.js"></script>
+    <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/kaavaValidationService.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/funktioNimiService.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/laskentakaavadirectives.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/funktioFactory.js"></script>
