--- a/src/main/webapp/app/index.html
+++ b/src/main/webapp/app/index.html
@@ -51,6 +51,7 @@
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/uusilaskentakaava.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/laskentakaavalomake.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/laskentakaavapuu.js"></script>
+    <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/alikaava.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/funktioServices.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/kaavaValidationService.js"></script>
     <script type="text/javascript" src="laskentakaavat/laskentakaavaeditori/funktioNimiService.js"></script>
