--- a/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
+++ b/src/main/webapp/app/laskentakaavat/laskentakaavaeditori/funktioasetukset/funktiokutsuAsetuksetModal.html
@@ -199,7 +199,8 @@
 
 
 <div class="modal-header">
-    <h3>Funktioasetukset</h3>
+    <h3>Funktioasetukset {{isAlikaava}}</h3>
+
 </div>
 <div class="modal-body">
     <h2>{{getFunktiokutsuName(funktioSelection)}}</h2>
