--- a/src/main/webapp/app/valintatapajono/valintatapajono.html
+++ b/src/main/webapp/app/valintatapajono/valintatapajono.html
@@ -61,6 +61,17 @@
 
     <div class="clear"></div>
 
+    <label class="form-row-label" for="kaikkiEhdonTayttavatHyvaksytaan">Kaikki ehdon täyttävät hyväksytään</label>
+
+    <div class="form-row-content">
+        <div class="field-container-checkbox">
+            <input type="checkbox" id="kaikkiEhdonTayttavatHyvaksytaan" name="kaikkiEhdonTayttavatHyvaksytaan"
+                   ng-model="model.valintatapajono.kaikkiEhdonTayttavatHyvaksytaan">
+        </div>
+    </div>
+
+    <div class="clear"></div>
+
     <div class="form-row-label">Tasasijasääntö</div>
     <div class="form-row-content">
         <div class="field-container-radio">
